Update promotion
Promotion can apply to more than 1 product.
Update all get product api.
Update order and cart to store and show more detail data (product name, product price, discount percentage, discount name, total amount and discounted total amount for each item and detail, total amount and discounted total amount for cart and order)